Starting with updating content for 2017

--- a/GaussianMixtureModel.tex
+++ b/GaussianMixtureModel.tex
@@ -1,3 +1,4 @@
+% !TEX root = Main.tex
 \section{Gaussian Mixture Models (GMM)}
 For GMM let $\boldsymbol{\theta}_k = (\boldsymbol{\mu}_k, \boldsymbol{\Sigma}_k)$; $p_{\theta_k}(\mathbf{x}) = \mathcal{N}(\mathbf{x} | \boldsymbol{\mu}_k, \Sigma_k)$
 \begin{compactdesc}
