--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 
 \let\bar\overline
 
-\definecolor{myblue}{cmyk}{1,.72,0,.38}
+\definecolor{myblue}{cmyk}{1,0.72,0,0.38}
 \definecolor{myorange}{cmyk}{0,0.5,1,0}
 
 \pgfdeclarelayer{background}
