--- a/NMF.tex
+++ b/NMF.tex
@@ -21,7 +21,7 @@ LDA model: $p(x|V,u) = \frac{l!}{\prod_j x_j!}\prod_j \pi_j^{x_j}$\\
 where $\pi_j=\sum_z v_{zj} u_z$, $l=\sum_j x_j$
 
 \subsection*{NMF Algorithm for quadratic cost function}
-$\mathbf{X} \in \mathbb{Z}^{N \times M}_{\geq 0}$, NMF: $\mathbf{X} \approx \mathbf{U^\top V}, x_{ij}$
+$\mathbf{X} \in \mathbb{Z}^{N \times M}_{\geq 0}$, NMF: $\mathbf{X} \approx \mathbf{U^\top V}, x_{ij} = \langle u_i, v_j \rangle$
 
 $\min_{\mathbf{U}, \mathbf{V}} J(\mathbf{U}, \mathbf{V}) = \frac{1}{2} \|\mathbf{X} - \mathbf{U}^\top\mathbf{V}\|_F^2$\\
 s.t. $\forall i,j,z:u_{zi},v_{zj} \geq 0 $
