--- a/main.tex
+++ b/main.tex
@@ -63,16 +63,20 @@ Daniel Yu,~page~\thepage~of~2
 \begin{document}
 \small
 \begin{multicols*}{4}
+\setcounter{section}{-1}
 \input{Essentials}
-\input{DimensionalityReduction}
+\input{PCA}
 \input{SVD}
-\input{Optimization}
+\input{Reconstruction}
 \input{NMF}
 \input{WordEmbedding}
-\input{KMeans}
-\input{GaussianMixtureModel}
-\input{ConvolutionalNN}
+\input{Mixture}
+% \input{KMeans}
+% \input{GaussianMixtureModel}
 \input{SparseCoding}
-\input{RobustPCA}
+\input{DictionaryLearning}
+\input{NeuralNetworks}
+\input{Generative}
+% \input{RobustPCA}
 \end{multicols*}
 \end{document}
