--- a/Reconstruction.tex
+++ b/Reconstruction.tex
@@ -54,7 +54,7 @@ Nuclear norm: $||A||_* = \sum_i \sigma_i$
 
 
 % Added by Zhifei Yang
-\subsection*{Function Convexity}
+\subsection*{Function Convexity (Jensen's inequality)}
 $f(\lambda x+(1-\lambda)y)\leq\lambda f(x)+(1-\lambda)f(y) \forall\lambda\in[0,1]$\\
 Convex $\iff$ Hessian p.s.d\\
 positive semi-definite: all principal minors (same-indexed rows and columns) $\geq$ 0\\
