--- a/Essentials.tex
+++ b/Essentials.tex
@@ -1,6 +1,6 @@
 % -*- root: Main.tex -*-
-\section{Essentials}
-\subsection*{Matrix/Vector}
+\section{Essentials}\noindent
+\subsection*{Matrix/Vector}\noindent
 \begin{compactdesc}
     \item[Range, Kernel, Nullity:]
     % range
