--- a/Essentials.tex
+++ b/Essentials.tex
@@ -1,6 +1,6 @@
 % -*- root: Main.tex -*-
-\section{Essentials}\noindent
-\subsection*{Matrix/Vector}\noindent
+\section{Essentials}[runin]
+\subsection*{Matrix/Vector}[runin]
 \begin{compactdesc}
     \item[Range, Kernel, Nullity:]
     % range
