--- a/main.tex
+++ b/main.tex
@@ -47,11 +47,11 @@ Daniel Yu,~page~\thepage~of~2
 }
 
 \makeatletter
-\renewcommand{\section}{\@startsection{section}{1}{0mm}%
+\renewcommand{\section}{\@startsection{section}{1}{0mm}{\z@}%
                                 {.2ex}%
                                 {.2ex}%x
                                 {\color{myorange}\sffamily\small\bfseries}}
-\renewcommand{\subsection}{\@startsection{subsection}{1}{0mm}%
+\renewcommand{\subsection}{\@startsection{subsection}{1}{0mm}{\z@}%
                                 {.2ex}%
                                 {.2ex}%x
                                 {\sffamily\bfseries}}
