--- a/Essentials.tex
+++ b/Essentials.tex
@@ -1,6 +1,6 @@
 % -*- root: Main.tex -*-
-\section{Essentials}[runin]
-\subsection*{Matrix/Vector}[runin]
+\section{Essentials}
+\subsection*{Matrix/Vector}
 \begin{compactdesc}
     \item[Range, Kernel, Nullity:]
     % range
