--- a/main.tex
+++ b/main.tex
@@ -47,11 +47,11 @@ Daniel Yu,~page~\thepage~of~2
 }
 
 \makeatletter
-\renewcommand{\section}{\@startsection{section}{1}{0mm}{\z@}%
+\renewcommand{\section}{\@startsection{section}{1}{0mm}%
                                {-3.25ex\@plus -1ex \@minus -.2ex}%
                                {-1.5ex \@plus .2ex}%
                                 {\color{myorange}\sffamily\small\bfseries}}
-\renewcommand{\subsection}{\@startsection{subsection}{1}{0mm}{\z@}%
+\renewcommand{\subsection}{\@startsection{subsection}{1}{0mm}%
                                {-3.25ex\@plus -1ex \@minus -.2ex}%
                                {-1.5ex \@plus .2ex}%
                                 {\sffamily\bfseries}}
